[gd_scene load_steps=6 format=3 uid="uid://bd521iwor8mwl"]

[ext_resource type="Script" uid="uid://et7sotnt142g" path="res://scripts/in_game_hud.gd" id="1_ay5hx"]
[ext_resource type="PackedScene" uid="uid://cqqyraf663xg3" path="res://objects/ability_button.tscn" id="1_lwrg5"]
[ext_resource type="Texture2D" uid="uid://bavxd6qmhd03i" path="res://assets/art/point.png" id="2_dflql"]
[ext_resource type="Theme" uid="uid://bnivdma6helc8" path="res://themes/UI_theme.tres" id="2_nv1qt"]
[ext_resource type="Texture2D" uid="uid://cx4xhll6f8ri6" path="res://assets/art/buildings/House_01.png" id="4_8q1ka"]

[node name="InGameHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_ay5hx")

[node name="RebelHud" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panels" type="HBoxContainer" parent="RebelHud"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="ObjectivePanel" type="VBoxContainer" parent="RebelHud/Panels"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 8

[node name="StageNumberText" type="RichTextLabel" parent="RebelHud/Panels/ObjectivePanel"]
layout_mode = 2
theme = ExtResource("2_nv1qt")
text = "Stage 1"
fit_content = true

[node name="ObjectiveRow" type="HBoxContainer" parent="RebelHud/Panels/ObjectivePanel"]
layout_mode = 2
size_flags_vertical = 8

[node name="ObjectiveText" type="RichTextLabel" parent="RebelHud/Panels/ObjectivePanel/ObjectiveRow"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme = ExtResource("2_nv1qt")
text = "Current objective: "
fit_content = true

[node name="ObjectiveIcon" type="TextureRect" parent="RebelHud/Panels/ObjectivePanel/ObjectiveRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
expand_mode = 2
stretch_mode = 4

[node name="RightControlsPanel" type="VBoxContainer" parent="RebelHud/Panels"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="HSeparator" type="HSeparator" parent="RebelHud/Panels/RightControlsPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 8

[node name="Emoji1Button" parent="RebelHud/Panels/RightControlsPanel" instance=ExtResource("1_lwrg5")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("2_dflql")
expand_mode = 2

[node name="Emoji2Button" parent="RebelHud/Panels/RightControlsPanel" instance=ExtResource("1_lwrg5")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
expand_mode = 2

[node name="Emoji3Button" parent="RebelHud/Panels/RightControlsPanel" instance=ExtResource("1_lwrg5")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("4_8q1ka")
expand_mode = 2

[node name="EmojiCooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="EmojiCooldownTimer" to="." method="_on_emoji_cooldown_timer_timeout"]
